# gen_ai_bot

backend/: .env.example  .gitignore  Dockerfile  README.md  dev-docker-compose.yml  docker-compose.yml  main.py  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0d227bebc3b9_added_user_and_session.py  0f7dbb21c7b7_create_user_and_session_tables.py  9c2d7df110b4_added_user_and_session.py
backend/app/: router.py
backend/app/advices/: base_response_handler.py  global_exception_handler.py  response.py
backend/app/config/: base_repository.py  logging.py  oci_storage.py  rq_config.py  settings.py  valkey.py
backend/app/db/: db_connection.py
backend/app/exceptions/: exceptions.py
backend/app/middlewares/: dependencies.py
backend/app/modules/chat_service/jobs/: document_jobs.py
backend/app/modules/chat_service/models/: chat_model.py  chat_session_messages.py  chat_session_model.py  chat_session_sources.py  chat_sessions.py  chat_source_model.py
backend/app/modules/chat_service/repositories/: __init__.py  chat_message_repository.py  chat_repository.py  chat_session_repository.py  chat_sessions_repository.py  chat_source_repository.py
backend/app/modules/chat_service/router/: __init__.py  chat_message_router.py  chat_router.py  chat_session_router.py
backend/app/modules/chat_service/schema/: __init__.py  chat_message_schema.py  chat_schema.py  session_schema.py  (+2 more)
backend/app/modules/utils/: object_service.py
mvp/: .dockerignore  Dockerfile  MVP_ANALYSIS.md  docker-compose.yaml  main.py  pyproject.toml
mvp/alembic/: env.py
mvp/alembic/versions/: 12ad0ff59cf6_initial_migration.py
mvp/app/api/: __init__.py
mvp/app/api/v1/: __init__.py  auth.py  chat.py  files.py  health.py  router.py
mvp/app/config/: base.py  base_repository.py  settings.py
mvp/app/db/: connect_db.py  database.py
mvp/app/models/: chat_model.py  chat_session_model.py  chat_source_model.py  user_model.py
mvp/app/queues/: __init__.py  queue_manager.py  tasks.py  worker.py
mvp/app/repositories/: chat_repository.py  chat_sessions_repository.py  chat_source_repository.py  user_repository.py
mvp/app/schemas/: __init__.py  auth.py  chat.py  file.py
mvp/app/services/: __init__.py  chat_service.py  memory_service.py  router_service.py  search_service.py
mvp/app/tools/: llm_tools.py
mvp/app/utils/: doc_processor.py  object_service.py  vector_service.py
mvp/config/: settings.py
mvp/tests/: cross_session_test.py  feature_tests.py  proof.sh  test_multitool.py  test_stream_client.py  test_summarization.py  test_tavily_raw.py  verify_user.py
(+50 files in other folders)
