[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.17.2",
    "asyncpg>=0.31.0",
    "bcrypt==3.2.2",
    "email-validator>=2.3.0",
    "fastapi[standard]>=0.127.1",
    "greenlet>=3.3.0",
    "langchain>=1.2.0",
    "langchain-community>=0.4.1",
    "langchain-groq>=1.1.1",
    "langchain-text-splitters>=1.1.0",
    "langgraph>=1.0.5",
    "mem0ai>=1.0.1",
    "passlib[bcrypt]>=1.7.4",
    "pydantic-settings>=2.12.0",
    "pypdf>=6.5.0",
    "python-jose[cryptography]>=3.5.0",
    "rq>=2.6.1",
    "sqlalchemy>=2.0.45",
]
